added explainable data in features.csv so we can load

--- a/src/notebooks/q2_feature_training.ipynb
+++ b/src/notebooks/q2_feature_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "<module 'features' from '/Users/kevinwong/Library/CloudStorage/GoogleDrive-kew024@ucsd.edu/My Drive/UCSD Winter Quarter 2025/dsc180b/dsc180b-capstone-q2/src/base/features.py'>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,13 +52,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "all_features = features.get_categorical_features2(\n",
     "    all_features, transaction_categories, acct\n",
-    ")"
+    ")\n",
+    "all_features.to_csv(\"../../data_q2/features.csv\")"
    ]
   },
   {
@@ -3064,354 +3065,6 @@
    ],
    "source": [
     "all_features.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>category_id</th>\n",
-       "      <th>category</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>SELF_TRANSFER</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>EXTERNAL_TRANSFER</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>DEPOSIT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>PAYCHECK</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>MISCELLANEOUS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>PAYCHECK_PLACEHOLDER</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>6</td>\n",
-       "      <td>REFUND</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>7</td>\n",
-       "      <td>INVESTMENT_INCOME</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>8</td>\n",
-       "      <td>OTHER_BENEFITS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>9</td>\n",
-       "      <td>UNEMPLOYMENT_BENEFITS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>10</td>\n",
-       "      <td>SMALL_DOLLAR_ADVANCE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>11</td>\n",
-       "      <td>TAX</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>12</td>\n",
-       "      <td>LOAN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>13</td>\n",
-       "      <td>INSURANCE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>14</td>\n",
-       "      <td>FOOD_AND_BEVERAGES</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>15</td>\n",
-       "      <td>UNCATEGORIZED</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>16</td>\n",
-       "      <td>GENERAL_MERCHANDISE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>17</td>\n",
-       "      <td>AUTOMOTIVE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>18</td>\n",
-       "      <td>GROCERIES</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>19</td>\n",
-       "      <td>ATM_CASH</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>20</td>\n",
-       "      <td>ENTERTAINMENT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>21</td>\n",
-       "      <td>TRAVEL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>22</td>\n",
-       "      <td>ESSENTIAL_SERVICES</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>23</td>\n",
-       "      <td>ACCOUNT_FEES</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>24</td>\n",
-       "      <td>HOME_IMPROVEMENT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>25</td>\n",
-       "      <td>OVERDRAFT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>26</td>\n",
-       "      <td>CREDIT_CARD_PAYMENT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>27</td>\n",
-       "      <td>HEALTHCARE_MEDICAL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>28</td>\n",
-       "      <td>PETS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>29</td>\n",
-       "      <td>EDUCATION</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>30</td>\n",
-       "      <td>GIFTS_DONATIONS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>31</td>\n",
-       "      <td>BILLS_UTILITIES</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>32</td>\n",
-       "      <td>MORTGAGE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>33</td>\n",
-       "      <td>CHILD_DEPENDENTS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>34</td>\n",
-       "      <td>RENT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>35</td>\n",
-       "      <td>BNPL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>36</td>\n",
-       "      <td>AUTO_LOAN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>37</td>\n",
-       "      <td>BANKING_CATCH_ALL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>38</td>\n",
-       "      <td>DEBT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>39</td>\n",
-       "      <td>FITNESS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>40</td>\n",
-       "      <td>TRANSPORATION</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>41</td>\n",
-       "      <td>LEGAL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>42</td>\n",
-       "      <td>GOVERNMENT_SERVICES</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>43</td>\n",
-       "      <td>RISK_CATCH_ALL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>44</td>\n",
-       "      <td>RTO_LTO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>45</td>\n",
-       "      <td>INVESTMENT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>46</td>\n",
-       "      <td>GAMBLING</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47</th>\n",
-       "      <td>47</td>\n",
-       "      <td>CORPORATE_PAYMENTS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>48</td>\n",
-       "      <td>TIME_OR_STUFF</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>49</td>\n",
-       "      <td>PENSION</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    category_id               category\n",
-       "0             0          SELF_TRANSFER\n",
-       "1             1      EXTERNAL_TRANSFER\n",
-       "2             2                DEPOSIT\n",
-       "3             3               PAYCHECK\n",
-       "4             4          MISCELLANEOUS\n",
-       "5             5   PAYCHECK_PLACEHOLDER\n",
-       "6             6                 REFUND\n",
-       "7             7      INVESTMENT_INCOME\n",
-       "8             8         OTHER_BENEFITS\n",
-       "9             9  UNEMPLOYMENT_BENEFITS\n",
-       "10           10   SMALL_DOLLAR_ADVANCE\n",
-       "11           11                    TAX\n",
-       "12           12                   LOAN\n",
-       "13           13              INSURANCE\n",
-       "14           14     FOOD_AND_BEVERAGES\n",
-       "15           15          UNCATEGORIZED\n",
-       "16           16    GENERAL_MERCHANDISE\n",
-       "17           17             AUTOMOTIVE\n",
-       "18           18              GROCERIES\n",
-       "19           19               ATM_CASH\n",
-       "20           20          ENTERTAINMENT\n",
-       "21           21                 TRAVEL\n",
-       "22           22     ESSENTIAL_SERVICES\n",
-       "23           23           ACCOUNT_FEES\n",
-       "24           24       HOME_IMPROVEMENT\n",
-       "25           25              OVERDRAFT\n",
-       "26           26    CREDIT_CARD_PAYMENT\n",
-       "27           27     HEALTHCARE_MEDICAL\n",
-       "28           28                   PETS\n",
-       "29           29              EDUCATION\n",
-       "30           30        GIFTS_DONATIONS\n",
-       "31           31        BILLS_UTILITIES\n",
-       "32           32               MORTGAGE\n",
-       "33           33       CHILD_DEPENDENTS\n",
-       "34           34                   RENT\n",
-       "35           35                   BNPL\n",
-       "36           36              AUTO_LOAN\n",
-       "37           37      BANKING_CATCH_ALL\n",
-       "38           38                   DEBT\n",
-       "39           39                FITNESS\n",
-       "40           40          TRANSPORATION\n",
-       "41           41                  LEGAL\n",
-       "42           42    GOVERNMENT_SERVICES\n",
-       "43           43         RISK_CATCH_ALL\n",
-       "44           44                RTO_LTO\n",
-       "45           45             INVESTMENT\n",
-       "46           46               GAMBLING\n",
-       "47           47     CORPORATE_PAYMENTS\n",
-       "48           48          TIME_OR_STUFF\n",
-       "49           49                PENSION"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "categories"
    ]
   },
   {
