add prism data logo

--- a/poster/poster.tex
+++ b/poster/poster.tex
@@ -71,8 +71,7 @@
 
 % use this to include logos on the left and/or right side of the header:
 \logoright{\includegraphics[height=5cm]{logos/hdsi-white.png}}
-%\logoleft{\includegraphics[height=5cm]{logos/hdsi-blue-gold.png}}
-% INCLUDE PRISM DATA LOGO
+\logoleft{\centering\includegraphics[height=8cm]{logos/prismdatalogo.png}}
 
 % ====================
 % Body
